@@ -2,7 +2,7 @@
 # test that known crash bugs remain fixed
 . test/testcase
 
-$cabextract -t bugs/*.cab
+"$cabextract" -t bugs/*.cab
 
 # fail if exit code indicates a crash (SIGBUS, SIGSEGV, etc.)
 test $? -le 1
