@@ -2,7 +2,7 @@
 # test cabextract --filter and --pipe options
 . test/testcase
 
-$cabextract -p cabs/mixed.cab >$actual
+"$cabextract" -p cabs/mixed.cab >$actual
 compare_with <<'EOF'
 If you can read this, the MSZIP decompressor is working!
 -----------------------------------------------------------------
@@ -11,19 +11,19 @@ If you can read this, the LZX decompressor is working!
 If you can read this, the Quantum decompressor is working!
 EOF
 
-$cabextract -p -F 'mszip.*' cabs/mixed.cab >$actual
+"$cabextract" -p -F 'mszip.*' cabs/mixed.cab >$actual
 compare_with <<'EOF'
 If you can read this, the MSZIP decompressor is working!
 EOF
 
-$cabextract -p -F '*zx*' cabs/mixed.cab >$actual
+"$cabextract" -p -F '*zx*' cabs/mixed.cab >$actual
 compare_with <<'EOF'
 -----------------------------------------------------------------
 If you can read this, the LZX decompressor is working!
 -----------------------------------------------------------------
 EOF
 
-$cabextract -p -F '*m.txt'  cabs/mixed.cab >$actual
+"$cabextract" -p -F '*m.txt'  cabs/mixed.cab >$actual
 compare_with <<'EOF'
 If you can read this, the Quantum decompressor is working!
 EOF
