@@ -2,7 +2,7 @@
 # test cabextract handles bad UTF-8 filenames
 . test/testcase
 
-$cabextract -l cabs/utf8-stresstest.cab >$actual
+"$cabextract" -l cabs/utf8-stresstest.cab >$actual
 compare_with <<'EOF'
 Viewing cabinet: cabs/utf8-stresstest.cab
  File size | Date       Time     | Name
