@@ -1,3 +1,7 @@
+2018-12-03 Stuart Caie <kyzer@cabextract.org.uk>
+
+	* test: support builddir being on a path that includes spaces
+
 2018-11-09 Stuart Caie <kyzer@cabextract.org.uk>
 
 	* test/case-utf8.test: Some environments (e.g. DJGPP) don't have a
